--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -18,3 +18,5 @@ en:
     agreement: I agree to the YouVersion terms and conditions.
     register: Register
     confirm email: "Thanks for registering! Please check your email and click the link to confirm."
+  try the beta: "Try the Beta"
+  welcome to the beta: "Welcome to the new YouVersion.com!"
