--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,9 +1,9 @@
 ---
 en:
-  language name: English
+  language name: "English"
   signed in as: "Signed in as %{user}"
   sign out: "Sign out"
-  youversion: YouVersion
+  youversion: "YouVersion"
   username or email prompt: "Username (or email):"
   password prompt: "Password:"
   sign in: "Sign in"
