additional bug fixes
Change-Id: I6c7da5ee1b5efd17f8289d9e9228ae8da71daaf9

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -21,3 +21,5 @@ en:
   try the beta: "Try the Beta"
   welcome to the beta: "Welcome to the new YouVersion.com!"
   invalid username or password: "Invalid username or password."
+  show all bookmarks: "Show all %{total} bookmarks"
+  recent bookmarks: "Recent Bookmarks"
