--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -92,5 +92,9 @@ en:
     confirm email:                "Thanks for registering! Please check your email and click the link to confirm."
     follow user:                  "Follow %{user}"
     user does not follow you:     "%{user} does not follow you"
+  plans:
+    title:                        "Reading Plans"
+    explore title:                "Explore Reading Plans"
+  
 
 
