unstyled implementation of plans#show

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -98,6 +98,9 @@ en:
     about publisher:              "About The Publisher"
     overview:                     "Plan Overview"
     start:                        "Start this Plan"
+    length:                       "Plan Length"
+    view sample:                  "View Sample of This Plan"
+    
   
 
 
