--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -65,13 +65,13 @@ en:
     my notes:                     "My Notes"
     all notes:                    "All Notes"
     community notes:              "Community Notes"
-    none exist blurb:             "Sorry, no notes here!"
     new note:                     "New Note"
     status field:                 "Note Status:"
     edit:                         "edit"
     delete:                       "delete this note"
     confirm delete:               "Are you sure?"
     write new:                    "Write New Note"
+    not found:                    "YouVersion allows you to associate video, audio, images, text, and links to other websites with any verse or series of verses in the Bible. It's a way to take part in the YouVersion community by sharing what you're learning and thinking as you engage with Scripture. Get started now by selecting a verse(s) in the Bible reader and adding your note. It's that easy."
   ref:
     choose book and chapter:      "Choose Book + Chapter"
     choose version:               "Choose Version"
