--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -7,6 +7,10 @@ en:
   username or email prompt:         "Username (or email):"
   password prompt:                  "Password:"
   sign in:                          "Sign in"
+  registered:                       "Registered"
+  remove:                           "Remove"
+  are you sure:                     "Are you sure?"
+  ago:                              "ago"
   version header:                   "Version: %{version}"
   bible versions:                   "Bible Versions"
   read this version:                "Read this version"
@@ -101,6 +105,7 @@ en:
     update profile:               "Update Profile"
     change my password:           "Change My Password"
     picture:                      "Picture"
+    update my picture:            "Update my Picture"
     manage notifications:         "Manage Notifications"
     connected accounts:           "Connected Accounts"
     connected devices:            "Connected Devices"
@@ -118,10 +123,22 @@ en:
       current password:           "Current Password"
       new password:               "New Password"
       confirm password:           "Confirm Password"
+      avatar file:                "Select a file for your picture"
+      your current picture:       "Your current picture:"
+      avatar help:                "Images can be in JPG, PNG, or GIF format. Your image will be converted to a 48x48 thumbnail. The maximum file size is 1MB."
+      updated picture:            "Successfully updated your picture."
+      updated notifications:      "Successfully updated your notification settings."
     password:
       updated:                    "Your password has been successfully changed."
       error:                      "Sorry, there was an error when changing your password."
       old was invalid:            "Sorry, you'll need to enter your old password correctly to change your password."
+    notifications:
+      badges:                     "Notify me about badges I've earned"
+      follower:                   "Notify me when someone follows me"
+      newsletter:                 "Keep me updated on YouVersion announcements"
+      note_like:                  "Notify me when someone likes my notes"
+      reading_plans:              "Notify me about information for reading plans I've started"
+      update:                     "Update Notifications"
   bookmarks:
     title:                        "Bookmarks"
     not found:                    "Bookmarking enables you to remember where you were reading last, giving you a quick reference guide to your favorite passages or to the last chapter you read in a particular book. In order to add a bookmark select the verse in the Bible reader and then click the bookmark button."
