fully functional reading plan interaction

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -160,5 +160,6 @@ en:
     subscribe to plan:            "Start this plan"
     previous day:                 "Previous Day"
     next day:                     "Next Day"
+    mark reading complete:        "Mark Reading Complete"
     subscription:
       Current Progress String:    "Day %{day} of %{total_days}"
