--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -147,6 +147,10 @@ en:
     view sample:                  "View a Sample Reading"
     users subscribed:             "%{user_count} Users Reading This Plan"
     more info:                    "More Info"
+    about this plan:              "About this plan"
+    about the publisher:          "About this publisher"
+    day:                          "Day"
+    month:                        "Month"
     publisher:                    "Publisher"
     success widget title:         "Reading Plan Success"
     success blurb:                "A reading plan is a teriffic tool to help you engage with the Bible, as each day you learn what it says by reading a manageable, carefully selected portion. We want to help you be succesfull in your reading plans..."
