added a bunch of user stuff

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -67,6 +67,7 @@ en:
     select from list:             "--Select--"
     edit note:                    "Edit Note"
     my notes:                     "My Notes"
+    my bookmarks:                 "My Bookmarks"
     all notes:                    "All Notes"
     community notes:              "Community Notes"
     new note:                     "New Note"
