--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -186,3 +186,12 @@ en:
     email reminder to me:                       "Email a daily reminder to me (%{email_address})"
     email weekly report to a friend:            "Email a weekly report to one or more YouVersion members"
     calendar:                                   "Calendar"
+    search members placeholder:                 "Find a YouVersion member"
+    search members:                             "Search"
+    email_on:                                   "Turn delivery on"
+    email_off:                                  "Turn delivery off"
+    email delivery text:                        "W3 can givez you an ur-ma13 in ur inb0x (%{email_address})!!!"
+    email delivery:                             "Email Delivery"
+    morning:                                    "Morning"
+    afternoon:                                  "Afternoon"
+    evening:                                    "Evening"
