--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -45,6 +45,7 @@ en:
   show all bookmarks:                           "Show all %{total} bookmarks"
   recent bookmarks:                             "Recent Bookmarks"
   percentage display:                           "%{number}%"
+  myself:                                       "Me"
   likes:
     my likes:                                   "My Likes"
     all likes:                                  "All Likes"
@@ -186,12 +187,16 @@ en:
     email reminder to me:                       "Email a daily reminder to me (%{email_address})"
     email weekly report to a friend:            "Email a weekly report to one or more YouVersion members"
     calendar:                                   "Calendar"
-    search members placeholder:                 "Find a YouVersion member"
+    search members placeholder:                 "Find a YouVersion Member"
     search members:                             "Search"
-    email_on:                                   "Turn delivery on"
-    email_off:                                  "Turn delivery off"
+    email_on:                                   "Turn Delivery On"
+    email_off:                                  "Turn Delivery Off"
     email delivery text:                        "W3 can givez you an ur-ma13 in ur inb0x (%{email_address})!!!"
     email delivery:                             "Email Delivery"
     morning:                                    "Morning"
     afternoon:                                  "Afternoon"
     evening:                                    "Evening"
+    delivery time:                              "Delivery Time:"
+    delivery version:                           "Delivery Version:"
+    add members placeholder:                    "YouVersion Member Name"
+    add member:                                 "Add"
