--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -96,8 +96,8 @@ en:
     user does not follow you:                   "%{user} does not follow you"
     recent activity:                            "Recent Activity"
     started following:                          "Started following"
-    subscribed to plan:                         "Users Subscribed to %{plan}"
-    reading:                                    "Users Reading This Plan"    
+    subscribed to plan:                         "Members Reading the %{plan} Plan"
+    reading:                                    "Members Reading This Plan"    
     subscribed previously:                      "Started %{time_ago} ago"
     sign in for settings:                       "You must be signed in to access your profile."
     my profile:                                 "My Profile"
@@ -191,7 +191,7 @@ en:
     search members:                             "Search"
     email_on:                                   "Turn Delivery On"
     email_off:                                  "Turn Delivery Off"
-    email delivery text:                        "W3 can givez you an ur-ma13 in ur inb0x (%{email_address})!!!"
+    email delivery text:                        "Turn email delivery on if you’d like to receive your daily reading plan content in your inbox (%{email_address}). Pick the time of day you’d like to receive the email and the Bible version that works best for you."
     email delivery:                             "Email Delivery"
     morning:                                    "Morning"
     afternoon:                                  "Afternoon"
