--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -7,6 +7,10 @@ en:
   username or email prompt:         "Username (or email):"
   password prompt:                  "Password:"
   sign in:                          "Sign in"
+  registered:                       "Registered"
+  remove:                           "Remove"
+  are you sure:                     "Are you sure?"
+  ago:                              "ago"
   version header:                   "Version: %{version}"
   bible versions:                   "Bible Versions"
   read this version:                "Read this version"
@@ -63,6 +67,7 @@ en:
     select from list:             "--Select--"
     edit note:                    "Edit Note"
     my notes:                     "My Notes"
+    my bookmarks:                 "My Bookmarks"
     all notes:                    "All Notes"
     community notes:              "Community Notes"
     new note:                     "New Note"
@@ -77,26 +82,75 @@ en:
     choose version:               "Choose Version"
     share:                        "Share"
     selected:                     "Selected"
-    settings:                     "Settings"
+    preferences:                  "Preferences"
     listen:                       "Listen"
     parallel:                     "Parallel"
     full screen:                  "Full Screen"
     about the:                    "About the"
   users:
     creation form errors:         "The following error(s) prevented creation of your account:"
-    email address:                "Email address:"
-    user name:                    "User name:"
-    password:                     "Password:"
+    profile form errors:          "The following error(s) prevented updating your profile:"
+    email address:                "Email address"
+    user name:                    "User name"
+    password:                     "Password"
     agreement:                    "I agree to the YouVersion terms and conditions."
+    facebook sign up success:     "Great! You've authorized with Facebook. Pick a YouVersion username and password to continue."
     register:                     "Register"
-    confirm email:                "Thanks for registering! Please check your email and click the link to confirm."
+    thanks for registering:       "Thanks for registering!"
+    welcome to youversion:        "Welcome to the YouVersion community!"
+    confirm email:                "Please check your email and click the link to confirm."
+    sign up for an account:       "Sign up for a free YouVersion account"
     follow user:                  "Follow %{user}"
+    follow:                       "Follow"
+    unfollow:                     "Unfollow"
+    following title:              "People I'm Following"
     user does not follow you:     "%{user} does not follow you"
     recent activity:              "Recent Activity"
     started following:            "Started following"
+    sign in for settings:         "You must be signed in to access your profile."
+    my profile:                   "My Profile"
+    edit profile:                 "Edit Profile"
+    update profile:               "Update Profile"
+    change my password:           "Change My Password"
+    picture:                      "Picture"
+    update my picture:            "Update my Picture"
+    manage notifications:         "Manage Notifications"
+    connected accounts:           "Connected Accounts"
+    connected devices:            "Connected Devices"
+    profile:
+      first name:                 "First name"
+      last name:                  "Last name"
+      location:                   "Location"
+      postal code:                "ZIP/Postal code"
+      website:                   "Web site"
+      country:                    "Country or Region"
+      timezone:                   "Timezone"
+      language:                   "Language"
+      updated:                    "You have successfully updated your profile."
+      error:                      "Sorry, there was an error updating your profile."
+      current password:           "Current Password"
+      new password:               "New Password"
+      confirm password:           "Confirm Password"
+      avatar file:                "Select a file for your picture"
+      your current picture:       "Your current picture:"
+      avatar help:                "Images can be in JPG, PNG, or GIF format. Your image will be converted to a 48x48 thumbnail. The maximum file size is 1MB."
+      updated picture:            "Successfully updated your picture."
+      updated notifications:      "Successfully updated your notification settings."
+    password:
+      updated:                    "Your password has been successfully changed."
+      error:                      "Sorry, there was an error when changing your password."
+      old was invalid:            "Sorry, you'll need to enter your old password correctly to change your password."
+    notifications:
+      badges:                     "Notify me about badges I've earned"
+      follower:                   "Notify me when someone follows me"
+      newsletter:                 "Keep me updated on YouVersion announcements"
+      note_like:                  "Notify me when someone likes my notes"
+      reading_plans:              "Notify me about information for reading plans I've started"
+      update:                     "Update Notifications"
   bookmarks:
     title:                        "Bookmarks"
     not found:                    "Bookmarking enables you to remember where you were reading last, giving you a quick reference guide to your favorite passages or to the last chapter you read in a particular book. In order to add a bookmark select the verse in the Bible reader and then click the bookmark button."
+    successfully created:         "Your bookmark has been added."
   badges:
     earned a badge:               "Earned a badge"
     my badges:                    "My Badges"
