plan preview and various ui tweaks

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -195,7 +195,7 @@ en:
     current progress html:                      "Day <b>%{day}</b> of <b>%{total_days}</b>"
     start date (before date string):            "Start Date:"
     end date (before date string):              "End Date:"
-    are you behind:                             "Have you gotten behind?"
+    are you behind:                             "Falling a bit behind?"
     do you want to reset:                       "Want a do-over?"
     catch up text:                              "Shift today's reading back to your last completed reading (day %{last_completed_day} of the plan)."
     catch up description only:                  "If you ever fall behind on your readings, don't worry! You can always shift the current reading back to your last completed reading."
@@ -215,7 +215,7 @@ en:
     search members:                             "Search"
     email_on:                                   "Turn Delivery On"
     email_off:                                  "Turn Delivery Off"
-    email delivery text:                        "Turn email delivery on if you’d like to receive your daily reading plan content in your inbox (%{email_address}). Pick the time of day you’d like to receive the email and the Bible version that works best for you."
+    email delivery text:                        "Turn email delivery on if you’d like to receive your daily reading plan content in your inbox. Pick the time of day you’d like to receive the email and the Bible version that works best for you."
     email delivery:                             "Email Delivery"
     morning:                                    "Morning"
     afternoon:                                  "Afternoon"
@@ -224,3 +224,6 @@ en:
     delivery version:                           "Delivery Version:"
     add members placeholder:                    "YouVersion Member Name"
     add member:                                 "Add"
+    email edit:                                 "Edit"
+    unsubscribe successful:                     "You unsubscribed from this Plan"
+    subscribe successful:                       "You are subscribed to this Plan"
