--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -227,3 +227,9 @@ en:
     email edit:                                 "Edit"
     unsubscribe successful:                     "You unsubscribed from this Plan"
     subscribe successful:                       "You are subscribed to this Plan"
+  registration:
+    benefits title:                             "YouVersion, a friend with benefits"
+    benefits blurb:                             "WHAT?! You don't have a YouVersion account? But there are so many cool features! Sign up now and you won't regret it -- they've done studies... IT'S IN THE GENEVA CONVENTION!! If you don't believe me, google it. *NC*"
+    plan blurb:                                 "Hey, you're tring to start a Reading Plan! Plans are a fantastic way to consistently engage with the Bible. Sign up to keep track of your progress and get other cool features. You can be started reading in seconds.*NC*"
+    bookmark blurb:                             "Hey, you're tring to use a Bookmark! Bookmarks are a fantastic way to keep track of scripture. Sign up to keep track of your favorite verses and get other cool features. You can be started bookmarking in seconds.*NC*"
+    friends blurb:                               "Hey, you're tring to interact with Friends! Friends are a fantastic way to keep up with how your peeps interact with scripture. Sign up to add friends and get other cool features. You can be started bookmarking in seconds.*NC*"
