fixed single verse display
Change-Id: I90ad33b4e7eb3dccd188f5d6dff9db3f0548f0ed

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,5 +1,7 @@
 ---
 en:
+  read reference:                               "Read %{reference}"
+  compare all versions:                         "Compare All Versions"
   my picture:                                   "Update my Picture"
   my notifications:                             "Manage Notifications"
   my connections:                               "Connected Accounts"
