added reader updates
Change-Id: I64a77f8609a404bc23653df1e4e126b2432813e2

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2,6 +2,7 @@
 en:
   read reference:                               "Read %{reference}"
   compare all versions:                         "Compare All Versions"
+  link will be added:                           "will be added"
   my picture:                                   "Update my Picture"
   my notifications:                             "Manage Notifications"
   my connections:                               "Connected Accounts"
