--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -231,6 +231,7 @@ en:
     email edit:                                 "Edit"
     unsubscribe successful:                     "You unsubscribed from this Plan"
     subscribe successful:                       "You are subscribed to this Plan"
+    which day in plan:                          "Day %{day} of %{total}"
   registration:
     benefits title:                             "YouVersion, a friend with benefits"
     benefits blurb:                             "WHAT?! You don't have a YouVersion account? But there are so many cool features! Sign up now and you won't regret it -- they've done studies... IT'S IN THE GENEVA CONVENTION!! If you don't believe me, google it. *NC*"
