fixed sign in and sign-out notice and cookie bugs

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -8,7 +8,9 @@ en:
   my connections:                               "Connected Accounts"
   my devices:                                   "Connected Devices"
   language name:                                "English"
-  signed in as:                                 "Signed in as %{user}"
+  successful sign-in:                           "Signed in as %{user}!"
+  successful sign-out:                          "Signed out!"
+  invalid login:                                "Invalid username or password"
   sign out:                                     "Sign out"
   youversion:                                   "YouVersion"
   username or email prompt:                     "Username (or email):"
