removed dynamic trigger menu if no audio bible exists.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -106,6 +106,7 @@ en:
     parallel:                                   "Parallel"
     full screen:                                "Full Screen"
     about the:                                  "About the"
+    settings:                                   "Reader Settings"
   users:
     creation form errors:                       "The following error(s) prevented creation of your account:"
     profile form errors:                        "The following error(s) prevented updating your profile:"
