--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -100,6 +100,7 @@ en:
     choose book and chapter:                    "Choose Book + Chapter"
     choose version:                             "Choose Version"
     share:                                      "Share"
+    share now:                                  "Share Now"
     selected:                                   "Selected"
     preferences:                                "Preferences"
     listen:                                     "Listen"
@@ -173,6 +174,7 @@ en:
     not found:                                  "Bookmarking enables you to remember where you were reading last, giving you a quick reference guide to your favorite passages or to the last chapter you read in a particular book. In order to add a bookmark select the verse in the Bible reader and then click the bookmark button."
     successfully created:                       "Bookmark added"
     labels placeholder:                         "Separate multiple labels with commas"
+    save:                                       "Save Bookmark"
   badges:
     earned a badge:                             "Earned a badge"
     my badges:                                  "My Badges"
