--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -13,7 +13,7 @@ en:
   compare all versions:                         "Compare All Versions"
   link will be added:                           "will be added"
   my picture:                                   "Update my Picture"
-  my notifications:                             "Manage Notifications"
+  my notifications:                             "Manage Email Notifications"
   my connections:                               "Connected Accounts"
   my devices:                                   "Connected Devices"
   language name:                                "English"
