--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -199,8 +199,8 @@ en:
     day:                                        "Day"
     month:                                      "Month"
     publisher:                                  "Publisher"
-    success widget title:                       "Reading Plan Success"
-    success blurb:                              "A reading plan is a terrific tool to help you engage with the Bible, as each day you learn what it says by reading a manageable, carefully selected portion. We want to help you be succesfull in your reading plans..."
+    success widget title:                       "Make the Most of Your Reading Plan"
+    success blurb:                              "When you start a YouVersion Reading Plan, you have the best intentions. You’re going to read every day and never miss, once and for all establishing that daily Bible reading habit that you’ve been promising yourself. And then your life happens—you get busy, you get tired, you get interrupted."
     success blog link title:                    "Read Blog Post"
     a users plans:                              "%{username}'s Plans"
     you have no plans:                          "You're not subscribed to any reading plans right now"
