tweaked a few bookmark styles, closes #60

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,6 +1,7 @@
 ---
 en:
   link:                                         "Link"
+  created ago:                                  "Created %{time_ago} ago"
   copy:                                         "Copy"
   new note:                                     "New Note"
   twitter:                                      "Twitter"
