--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -139,6 +139,16 @@ en:
     update profile:                             "Update Profile"
     my password:                                "Change My Password"
     picture:                                    "Picture"
+    my recent activity:                         "My Recent Activity"
+    user recent activity:                       "%{user}'s Recent Activity"
+    my notes:                                   "My Notes"
+    user notes:                                 "%{user}'s Notes"
+    my friends:                                 "My Friends"
+    user friends:                               "%{user}'s Friends"
+    my bookmarks:                               "My Bookmarks"
+    user bookmarks:                             "%{user}'s Bookmarks"
+    my likes:                                   "My Likes"
+    user likes:                                 "%{user}'s Likes"
     profile:
       first name:                               "First name"
       last name:                                "Last name"
