updated bookmarks list style, fixes #91

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -206,6 +206,7 @@ en:
   bookmarks:
     title field:                                "Title"
     lables:                                     "Labels"
+    labels label:                               "Labels:"
     title:                                      "Bookmarks"
     not found:                                  "Bookmarking enables you to remember where you were reading last, giving you a quick reference guide to your favorite passages or to the last chapter you read in a particular book. In order to add a bookmark select the verse in the Bible reader and then click the bookmark button."
     successfully created:                       "Bookmark added"
