sign in and up widgets added, closes #100

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -40,6 +40,10 @@ en:
   my connections:                               "Connected Accounts"
   my devices:                                   "Connected Devices"
   language name:                                "English"
+  sign in:                                      "Sign In"
+  sign up:                                      "Sign Up"
+  have an account?:                             "Already Have an Account?"
+  no account?:                                  "Don't Have an Account?"
   successful sign-in:                           "Signed in as %{user}!"
   successful sign-out:                          "Signed out!"
   invalid login:                                "Invalid username or password"
