--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -141,7 +141,7 @@ en:
     settings:                                   "Reader Settings"
     invalid chapter title:                      "Sorry"
     invalid chapter text:                       "This chapter does not exist in this version."
-    select another chapter:                     "Pick a New Chapter"
+    select another chapter:                     "Pick a Different Chapter"
   users:
     creation form errors:                       "The following error(s) prevented creation of your account:"
     profile form errors:                        "The following error(s) prevented updating your profile:"
