--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -73,7 +73,7 @@ en:
   terms:                                        "Terms"
   press:                                        "Press"
   support:                                      "Support"
-  donate:                                       "Donate"
+  donate title:                                 "Donate"
   choose language field:                        "Choose Your Language:"
   settings:                                     "Settings"
   profile:                                      "Profile"
@@ -415,3 +415,12 @@ en:
     total results:                              "About %{total} results"
     suggestion html:                            "Did you mean %{suggestion_link}?"
     all versions:                               "Any %{language_name} Version"
+  donate:
+    donate now:                                 "Donate Now"
+    promo 1:                                    "For every $1 you give, 10 more people get access to the bible on their mobile phone."
+    promo 2:                                    "With YouVersion, the Bible is always nearby. Watch Our Video."
+    promo 3:                                    "This year over 5 billion people will use a mobile phone. Donate Now."
+    headline:                                   "Everyone needs God’s Word."
+    subhead:                                    "You can help put a Bible at the fingertips of millions."
+    copy:                                       "Imagine if you could give everyone in the world a free Bible. When you give to YouVersion, you can do just that. We're alive during a time that others have only dreamed of &ndash; when anyone with a phone can access the Bible and experience the story of God's love for us. With your support, we can continue to help more people spend more time in Scripture."
+
