fixed rails override for confirm

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -48,8 +48,8 @@ en:
   language name:                                "English"
   sign in:                                      "Sign In"
   sign up:                                      "Sign Up"
-  have an account?:                             "Already Have an Account?"
-  no account?:                                  "Don't Have an Account?"
+  have an account:                             "Already Have an Account?"
+  no account:                                  "Don't Have an Account?"
   successful sign-in:                           "Signed in as %{user}!"
   successful sign-out:                          "Signed out!"
   invalid login:                                "Invalid username or password"
