--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -61,7 +61,7 @@ en:
   sign in to youversion:                        "Sign in to YouVersion"
   registered:                                   "Registered"
   remove:                                       "Remove"
-  are you sure:                                 "Are you sure?"
+  confirm danger:                               "Yes, I'm sure"
   ago:                                          "ago"
   version header:                               "Version: %{version}"
   bible versions:                               "Bible Versions"
@@ -127,7 +127,7 @@ en:
     status field:                               "Note Status:"
     edit:                                       "edit"
     delete:                                     "delete this note"
-    confirm delete:                             "Are you sure?"
+    confirm delete:                             "Yes, I'm sure"
     write new:                                  "Write New Note"
     not found:                                  "YouVersion allows you to associate video, audio, images, text, and links to other websites with any verse or series of verses in the Bible. It's a way to take part in the YouVersion community by sharing what you're learning and thinking as you engage with Scripture. Get started now by selecting a verse(s) in the Bible reader and adding your note. It's that easy."
     cancel:                                     "Cancel"
@@ -309,7 +309,7 @@ en:
     successfully created:                       "Bookmark added"
     labels placeholder:                         "Separate multiple labels with commas"
     save:                                       "Save Bookmark"
-    confirm delete:                             "Are you sure?"
+    confirm delete:                             "Yes, I'm sure"
   badges:
     earned a badge:                             "Earned a badge"
     my badges:                                  "My Badges"
