bookmark delete bugfix

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -307,6 +307,7 @@ en:
     title:                                      "Bookmarks"
     not found:                                  "Bookmarking enables you to remember where you were reading last, giving you a quick reference guide to your favorite passages or to the last chapter you read in a particular book. In order to add a bookmark select the verse in the Bible reader and then click the bookmark button."
     successfully created:                       "Bookmark added"
+    successfully deleted:                       "Bookmark removed"
     labels placeholder:                         "Separate multiple labels with commas"
     save:                                       "Save Bookmark"
     confirm delete:                             "Yes, I'm sure"
